--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,4 +6,6 @@
 
 <app-footer></app-footer>
 
-<app-loader [loading]="false"></app-loader>
+<p-toast></p-toast>
+
+<!-- <app-loader [loading]="false"></app-loader> -->
